--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,16 @@
-.userInput, .passwordInput {
-    margin-top:8px;
-    margin-bottom:20px;
-    width:400px!important;
-    height:35px!important;
-    text-align:center;
+p {
+    margin-bottom: 0px!important;
+    margin-top: 0px!important;
 }
 
-.registerForm {
-    margin-top:60px;
+/* Global calss for shadows*/
+.shadow-box {
+    text-shadow: 0px 2px 2px rgba(0,0,0,0.4), 0px 2px 3px rgba(0,0,0,0.1), 0px 2px 3px rgba(0,0,0,0.1);
 }
 
 .logo {
     color:green;
     text-align:center;
-}
-
-.backgrounds {
-    height: 800px;
-    background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQJaEaP951be3aa37GGvSmBwp5ZfNUobIqoaxuGzaqJIYPAPzbp&usqp=CAU");
-    background-position-y: -300px;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 .footer {
