--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,6 +1,5 @@
 /* Home container*/
 .home {
-    max-height: 1500px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -10,11 +9,22 @@
     width: 100%;
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
     z-index: -1;
-    margin-bottom: -150px;
+    margin-bottom: -250px;
 }
 
 .home__row {
     display: flex;
     z-index: 1;
-    
+    width: 99%;
+}
+
+@media only screen and (max-width: 900px) {
+    /* Home image*/
+    .home__image {
+        margin-bottom: -100px;
+    }
+
+    .home__row {
+        display: grid;
+    }
 }
