--- a/src/components/Header/header__options.css
+++ b/src/components/Header/header__options.css
@@ -32,7 +32,7 @@
     margin: auto;
     color: #fff !important;
     text-decoration: none !important;
-    width: 55px!important;
+    width: 73px!important;
 }
 
     /*link at the last spot*/
@@ -66,7 +66,7 @@
 }
 
 .search__button {
-    margin-top: -1px;
+    /*margin-top: -1px;*/
     height: 47px;
     width: 60px;
 }
