--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
-    max-width: 400px;
+    justify-content: flex-end;
+    /*max-width: 400px;*/
+    /*max-width: 30%;*/
     min-width: 100px;
     margin: 10px;
     padding: 20px;
@@ -17,22 +18,41 @@
 }
 
 .product > img {
-    max-width: 200px;
+    max-width: 60%;
     width: 100%;
-    object-fit: contain!important;
+    object-fit: contain;
     margin: auto;
     padding-bottom: 10px;
 }
 
-.product > button {
+.product > div > button {
     background-color: #e5ca35;
+    max-width: 100%;
+    /*width: 200px!important;*/
+    /*font-size: 240%;*/
 }
 
 .product__info {
     height: 100px;
     margin-bottom: 15px;
+    width: 100%;
+    /*font-size: 240%;*/
 }
 
 .product__price {
-    margin-top: 5px!important;
+    margin-top: 5px !important;
+    /*font-size: 120%;*/
+}
+
+@media only screen and (max-width: 1300px) {
+    .product__info {
+        height: 150px;
+    }
+}
+
+
+@media only screen and (max-width: 900px) {
+    .product__info {
+        height: 150px;
+    }
 }
