--- a/src/Pages/Checkout/Checkout.css
+++ b/src/Pages/Checkout/Checkout.css
@@ -8,6 +8,10 @@
     height: max-content;
 }
 
+.row {
+    width: 100%;
+}
+
 .subtotal__container {
     /*background-color: rgba(255,255,255,0.3);*/
     /*background-color: #808080;*/
