--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -15,7 +15,7 @@
 .home__row {
     display: flex;
     z-index: 1;
-    width: 99%;
+    width: 99%!important;
 }
 
 @media only screen and (max-width: 900px) {
