--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -4,13 +4,17 @@
     align-items: center;
     justify-content: flex-end;
     /*max-width: 400px;*/
-    /*max-width: 30%;*/
+    width: 98%!important;
     min-width: 100px;
     margin: 10px;
     padding: 20px;
     width: 100%;
     background-color: white;
     z-index: 1;
+}
+
+.col {
+    width: 97%;
 }
 
 .product__rating {
