--- a/src/App.css
+++ b/src/App.css
@@ -35,10 +35,14 @@ p {
     height:50px;
 }
 
+.row {
+    width: 100%;
+    margin: auto!important;
+}
 
-
-
-
+.col {
+    width: 100%;
+}
 
 /*.App {
   text-align: center;
