--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -3,19 +3,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    /*max-width: 400px;*/
-    width: 98%!important;
+    max-width: 400px;
+    width: 98% !important;
     min-width: 100px;
     margin: 10px;
     padding: 20px;
     width: 100%;
     background-color: white;
     z-index: 1;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
-.col {
-    width: 97%;
-}
+    .product:hover {
+        box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+        transform: rotate(360deg) scale(1.01);
+        -ms-transform: rotate(360deg) scale(1.01);
+        -webkit-transform: rotate(360deg) scale(1.01);
+    }
 
 .product__rating {
     display: flex;
@@ -48,9 +52,21 @@
     /*font-size: 120%;*/
 }
 
+.category-cursor {
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 1300px) {
     .product__info {
         height: 150px;
+    }
+
+    .product {
+        display: grid;
+        margin-left: auto;
+        margin-right: auto;
+        min-width: 350px;
+        max-width: 350px;
     }
 }
 
