--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -14,12 +14,16 @@
     transition: box-shadow 0.3s ease-in-out;
 }
 
-    .product:hover {
-        box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-        transform: rotate(360deg) scale(1.01);
-        -ms-transform: rotate(360deg) scale(1.01);
-        -webkit-transform: rotate(360deg) scale(1.01);
-    }
+.product__title {
+    height: 70px;
+}
+
+.product:hover {
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+    transform: rotate(360deg) scale(1.01);
+    -ms-transform: rotate(360deg) scale(1.01);
+    -webkit-transform: rotate(360deg) scale(1.01);
+}
 
 .product__rating {
     display: flex;
@@ -27,6 +31,7 @@
 
 .product > img {
     max-width: 60%;
+    max-height: 60%;
     width: 100%;
     object-fit: contain;
     margin: auto;
