Fixing main logic for products and categories, changed wth internal fitering and the search details now works the way it has to be

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -22,6 +22,10 @@
     margin-top: -140px;
 }
 
+.admin__widgets {
+    margin: auto;
+}
+
 @media only screen and (max-width: 900px) {
     /* Home image*/
     .home__image {
