Fixing order page and some changes in pictures

--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,10 @@ p {
     text-align:center;
 }
 
-.footer {
+/*.footer {
     height:80px;
     width:100%;
-}
+}*/
 
 .firstFooterLink {
     text-align:center;
