--- a/src/components/Navbars.css
+++ b/src/components/Navbars.css
@@ -10,11 +10,9 @@
 }
 
 
-.footer {
+/*.footer {
     position: fixed;
     bottom: 0px;
-    /*left: 10%;
-    right: 10%;*/
     width: 100%;
     padding: 5px 14px;
     display: flex;
@@ -24,4 +22,4 @@
     background-color: white;
     box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
     z-index: 99 !important;
-}
+}*/
